// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Group Snapshots Render with children w/out classname 1`] = `
<div>
  <div
    class="brz-ed-control__group"
  >
    <div
      class="brz-ed-option"
    >
      option1
    </div>
    <div
      class="brz-ed-option"
    >
      option2
    </div>
    <div
      class="brz-ed-option"
    >
      option3
    </div>
  </div>
</div>
`;

exports[`Test Group Snapshots Render with children with classname 1`] = `
<div>
  <div
    class="brz-ed-control__group custom-classname"
  >
    <div
      class="brz-ed-option"
    >
      option1
    </div>
    <div
      class="brz-ed-option"
    >
      option2
    </div>
    <div
      class="brz-ed-option"
    >
      option3
    </div>
  </div>
</div>
`;

exports[`Test Group Snapshots Render with children w/out classname 1`] = `
<div>
  <div
    class="brz-ed-control__group"
  >
    <div
      class="brz-ed-option"
    >
      option1
    </div>
    <div
      class="brz-ed-option"
    >
      option2
    </div>
    <div
      class="brz-ed-option"
    >
      option3
    </div>
  </div>
</div>
`;

exports[`Test Group Snapshots Render with children with classname 1`] = `
<div>
  <div
    class="brz-ed-control__group custom-classname"
  >
    <div
      class="brz-ed-option"
    >
      option1
    </div>
    <div
      class="brz-ed-option"
    >
      option2
    </div>
    <div
      class="brz-ed-option"
    >
      option3
    </div>
  </div>
</div>
`;
